# smart-ielts-reading-backend

./: .gitignore  alembic.ini  create_db.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  simple_test.py  template.yaml  test_db_setup.py  test_simple.py
app/: container.py  handler.py
app/application/errors/: application_errors.py  ocr_errors.py
app/application/services/: connection_manager_service.py  content_to_test_service.py  image_processor_service.py  image_to_text_service.py  passage_service.py  password_service.py  test_generator_service.py  test_service.py  token_service.py  websocket_broadcaster_service.py
app/common/: dependencies.py  di.py  settings.py
docs/: DATABASE_DESIGN_SUMMARY.md  IMPLEMENTATION_PLAN_SESSIONS.md
migrations/: README.md  env.py
migrations/versions/: 1aba9e55558c_add_options_to_question_groups.py  415c273bd7f0_add_teacher_role_and_multiple_teachers_.py  59878757fe65_update_test_enums_to_use_domain_enums.py  5cbeb33460e3_add_classes_and_sessions_tables_for_.py  5cf145a9658b_add_is_deleted_column_to_passage_and_.py  5d5adfd19bc5_fix_timezone_aware_datetime_fields.py  6780faef311d_refactor_student_class_to_many_to_many.py  7d8ec5f13c61_add_question_groups_table_and_update_.py  949fce0add24_add_refresh_token.py  c96771273a26_add_last_login_column_to_users.py  e1150affaf5e_add_created_by_column_to_classes.py  e799bae5bce5_initial_migration_create_all_tables.py
tests/: README.md  README_PYCHARM.md  test_di_system.py
tests/integration/: test_attempt_endpoints.py  test_session_endpoints.py  test_submit_attempt.py
(+266 files in other folders)
